# miniagent

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  config.yaml  pyproject.toml
docs/screenshots/: README.md
miniagent/: __main__.py
miniagent/agent/: __init__.py  events.py  pipeline.py  tools.py
miniagent/browser/: __init__.py  context.py  routes.py  server.py
miniagent/config/: __init__.py  loader.py  settings.py  types.py
miniagent/gateway/: __init__.py  broadcaster.py  connection.py  handler_registry.py  server.py  session_state.py
miniagent/gateway/handlers/: agent.py  browser.py  chat.py
miniagent/protocol/: __init__.py  error_codes.py  frames.py  methods.py
miniagent/sessions/: __init__.py  store.py
miniagent/ui/: index.html
tests/: test_agent_pipeline.py  test_browser.py  test_config.py  test_gateway.py  test_protocol.py  test_sessions.py
